added FinalStateFiller class and modifed some variable names

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,6 +30,7 @@ ROOT_GENERATE_DICTIONARY(
   include/Jet.h
   include/Lepton.h
   include/FinalState.h
+  include/FinalStateFiller.h
   LINKDEF include/LinkDef.h
   )
 
