--- a/producers/CMakeLists.txt
+++ b/producers/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(mAIDA.exe mAIDA.cxx)
-target_link_libraries(mAIDA.exe mAIDA ${ROOT_LIBRARIES} ${Boost_PROGRAM_OPTIONS_LIBRARY})
+target_link_libraries(mAIDA.exe mAIDA ${ROOT_LIBRARIES} ${Boost_PROGRAM_OPTIONS_LIBRARY} TMVA)
