started using the wonderful TLorentzVector what was I missing all this time wow

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ include_directories("${CMAKE_SOURCE_DIR}/include")
 ROOT_GENERATE_DICTIONARY(
   mAIDAdict
   include/Reader.h
+  include/PhysicsObject.h
   include/Jet.h
   include/Lepton.h
   include/FinalState.h
