--- a/sb/CMakeLists.txt
+++ b/sb/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(sb sb.cxx)
-target_link_libraries(sb mAIDAlib ${ROOT_LIBRARIES} ${Boost_PROGRAM_OPTIONS_LIBRARY} TMVA)
+target_link_libraries(sb mAIDAclasses ${ROOT_LIBRARIES} ${Boost_PROGRAM_OPTIONS_LIBRARY} TMVA)
