--- a/producers/CMakeLists.txt
+++ b/producers/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(mAIDA mAIDA.cxx)
-target_link_libraries(mAIDA mAIDAlib ${ROOT_LIBRARIES} ${Boost_PROGRAM_OPTIONS_LIBRARY} TMVA)
+target_link_libraries(mAIDA mAIDAclasses ${ROOT_LIBRARIES} ${Boost_PROGRAM_OPTIONS_LIBRARY} TMVA)
