trying to make it so this can be steered by python script -- yet to test it

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ ROOT_GENERATE_DICTIONARY(
   include/VariableFiller.h
   include/MVASigBkg.h
   include/LeptonPair.h
+  include/MVARunner.h
   LINKDEF include/LinkDef.h
   )
 
